--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,31 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="593"
+    android:viewportHeight="514">
+  <group android:scaleX="0.67833334"
+      android:scaleY="0.58796513"
+      android:translateX="95.37417"
+      android:translateY="105.89296">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M0,0h593v514h-593z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M241.89,260.89C244.04,258.74 244.04,255.26 241.89,253.11L206.89,218.11C204.74,215.96 201.26,215.96 199.11,218.11C196.96,220.26 196.96,223.74 199.11,225.89L230.22,257L199.11,288.11C196.96,290.26 196.96,293.74 199.11,295.89C201.26,298.04 204.74,298.04 206.89,295.89L241.89,260.89ZM93,262.5L238,262.5V251.5L93,251.5V262.5Z"
+        android:fillColor="#909300"/>
+    <path
+        android:pathData="M348.11,253.11C345.96,255.26 345.96,258.74 348.11,260.89L383.11,295.89C385.26,298.04 388.74,298.04 390.89,295.89C393.04,293.74 393.04,290.26 390.89,288.11L359.78,257L390.89,225.89C393.04,223.74 393.04,220.26 390.89,218.11C388.74,215.96 385.26,215.96 383.11,218.11L348.11,253.11ZM500.01,251.5L352,251.5V262.5L500.01,262.5V251.5Z"
+        android:fillColor="#909300"/>
+    <path
+        android:pathData="M293.11,208.89C295.26,211.04 298.74,211.04 300.89,208.89L335.89,173.89C338.04,171.74 338.04,168.26 335.89,166.11C333.74,163.96 330.26,163.96 328.11,166.11L297,197.22L265.89,166.11C263.74,163.96 260.26,163.96 258.11,166.11C255.96,168.26 255.96,171.74 258.11,173.89L293.11,208.89ZM291.5,60V205H302.5V60H291.5Z"
+        android:fillColor="#909300"/>
+    <path
+        android:pathData="M300.89,305.11C298.74,302.96 295.26,302.96 293.11,305.11L258.11,340.11C255.96,342.26 255.96,345.74 258.11,347.89C260.26,350.04 263.74,350.04 265.89,347.89L297,316.78L328.11,347.89C330.26,350.04 333.74,350.04 335.89,347.89C338.04,345.74 338.04,342.26 335.89,340.11L300.89,305.11ZM302.5,454V309H291.5V454H302.5Z"
+        android:fillColor="#909300"/>
+    <path
+        android:pathData="M319.5,257C319.5,267.89 309.87,277.5 297,277.5C284.13,277.5 274.5,267.89 274.5,257C274.5,246.11 284.13,236.5 297,236.5C309.87,236.5 319.5,246.11 319.5,257Z"
+        android:strokeWidth="13"
+        android:fillColor="#00000000"
+        android:strokeColor="#909300"/>
+  </group>
 </vector>
